<resources>
    <string name="app_name">Riichit</string>
    <string name="title_activity_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="prefs_work_in_progress">In development</string>
    <string name="prefs_general">General preferences</string>
    <string name="prefs_ema_names">European yaku names</string>
    <string name="prefs_ema_names_summary">Yaku names will be changed accordingly to EMA rules</string>
    <string name="prefs_score_saving">Save scores</string>
    <string name="prefs_score_saving_summary">Your profile will be updating every game</string>
    <string name="prefs_game_rules">Game rules</string>
    <string name="prefs_yaku_training">Yaku training</string>
    <string name="prefs_yaku_training_summary">You\'ll be asked which yaku you have on winning</string>
    <string name="prefs_tempai_training">Tempai training</string>
    <string name="prefs_tempai_training_summary">You\'ll be asked which tiles you are waiting on tempai</string>
    <string name="prefs_tsumo_furiten">Hardcore</string>
    <string name="prefs_tsumo_furiten_summary">Furiten rule for tsumo</string>
    <string name="lang">R.drawable.en</string>
    <string name="button_solo_mahjong">Play Solo Mahjong</string>
    <string name="button_solo_man">Play Solo Man Only</string>
    <string name="button_settings">Settings</string>
    <string name="button_records">Records</string>
    <string name="button_tutorial">Tutorial</string>
    <string name="button_achievements">Gallery</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_kan">Kan</string>
    <string name="button_over">Over</string>
    <string name="button_riichi">Riichi</string>
    <string name="button_tempai">Tempai</string>
    <string name="button_tsumo">Tsumo</string>
    <string name="button_nagashi">O_O</string>
    <string name="cost">Dealer cost</string>
    <string name="fu">fu</string>
    <string name="han">Han</string>
    <string name="illegal_discard">You can discard only tsumo now</string>
    <string name="illegal_kan">Wrong kan call</string>
    <string name="illegal_kan_riichi">Can\'t declare kan if it changes winning tiles under riichi</string>
    <string name="no_riichi_bet">Can\'t afford riichi, it costs 1000 points to bet</string>
    <string name="no_tiles_left">No tiles left!</string>
    <string name="tempai">Tempai:</string>
    <string name="profile">Profile %d</string>
    <string name="gamemode">game mode:</string>
    <string name="balance">balance:</string>
    <string name="streak">streak:</string>
    <string name="solo_mahjong">Solo Mahjong</string>
    <string name="solo_man">Solo Man</string>
    <string name="button_back">Back</string>
    <string name="loading">Loading…</string>
    <string name="tutorial_0" />
    <string name="tutorial_1">This is the tutorial.\n\nTo navigate through it, click on left and right parts of the screen.</string>
    <string name="tutorial_2">Riichi-mahjong consists of 34 different tiles. For each tile, there are 4 of them.\n\nThey belong to groups, such as Man, Pin, Sou (numerable tiles), Wind and Dragons (honour tiles).\n\nWinds are called East, South, West, North, and dragons are just Red, White and Green.</string>
    <string name="tutorial_3">The objective of Riichi-mahjong and this training application is to win a hand.\n\nIn a game, each player has 13 tiles in their hand. In every turn, you\'ll draw a tile, so the total number becomes 14.</string>
    <string name="tutorial_4">Then, if your hand is not winning, you shall discard one from your hand.\n\nWhile you keep drawing and discarding tiles, your hand will have changes.</string>
    <string name="tutorial_5">There are terms, such as Pairs, Sequences (Chii), Triplets (Pon) and Quads (Kan).\n\nPairs are just made of 2 identical tiles.\n\nTriplets (Pon) are made of 3 identical tiles.\n\nSequences (Chii) are made of 3 consecutive tiles of the same numerable group.</string>
    <string name="tutorial_6">Be aware, that sequences cannot be made of honour tiles, since they are not numerable.</string>
    <string name="tutorial_7">Quad (Kan) is made of 4 identical tiles.\n\nIt also implies, that you must have one additional tile for other forms.\n\nIn order to keep it that way, you shall declare Kan.</string>
    <string name="tutorial_8">Usually, when your hand consists of 4 Sequences or Triplets/Quads + 1 Pair, you are ready to declare your win!\n\nHowever, you need to have YAKU as well.</string>
    <string name="tutorial_9">Yaku mostly is a specific pattern of tiles. However, some of them are just conditional.\n\nFor example, having only numerable tiles without any 1s and 9s is a yaku, and it\'s called All Simples (Tanyao).</string>
    <string name="tutorial_10">Also you may have three identical Sequences (Chii) of different groups, it\'s called Mixed Triple Sequence (Sanshoku).\n\nThere are many of them, so please consider having list of Riichi-mahjong yaku while playing Riichit.</string>
    <string name="tutorial_11">You must know, that having 4 completed forms of tiles and 1 pair without having a yaku may lead to penalty, that\'s called Chombo.</string>
    <string name="tutorial_12">Now about some yaku, that aren\'t dependent on pattern of tiles, but on special condition.\n\nFor example, Riichi.\n\nIf you have almost completed your hand, discarded all unwanted tiles and need only one more to win, you may declare Riichi.</string>
    <string name="tutorial_13">That means, you\'ll bet additional 1000 in-game points and lose opportunity to change your hand, but you\'ll have yaku if you win.\n\nYou must discard the tile you\'ve drawn until comes your winning tile or end of the game.</string>
    <string name="tutorial_14">By the way, that situation where you need only one tile to win is called Tempai.</string>
    <string name="tutorial_15">There\'s also another one yaku - Fully Concealed Hand (Menzen Tsumo).\n\nWhile playing with other players, you may make calls from them. This won\'t be covered in Riichit, but you may find this in Riichi-mahjong rules.</string>
    <string name="tutorial_16">If you didn\'t make any calls and win by yourself (by calling Tsumo), you get additional yaku.\n\nYou must know, that the same requirement is for calling Riichi - you cannot do this if you\'ve made calls from other players in this round.</string>
    <string name="tutorial_17">So in Riichit you may not worry about having yaku in your hand, but…\n\n…the more you\'ve got, the more your hand will be cost.\n\nYou might lose the game after some consecutive round wins if your hands were cheap, so consider having more yaku!</string>
    <string name="tutorial_18">We\'ve almost finished. Now let\'s talk about Riichit game field.\n\nAt the bottom of your screen you have your hand.\n\nAt the bottom right is your tsumo-tile - the new tile in your hand.</string>
    <string name="tutorial_19">You may also call Kan for having a quad of same tiles, Riichi for already discussed yaku, or Tsumo for calling a win by yourself.</string>
    <string name="tutorial_20">At upper left will be your discard, but at upper right you have dora indicator.\n\nDora indicator points at your valuable tiles. For example, if dora indicator is 4 Man, then 5 man is a dora. 9 points at 1, for winds it\'s E -> S -> W -> N -> E, for dragons it\'s Red -> White -> Green -> Red.</string>
    <string name="tutorial_21">Every dora tile in your hand increases your winning hand cost, however it\'s not a yaku.\n\nEvery called Kan opens one more dora indicator. And winning with Riichi will reveal hidden dora indicators!</string>
    <string name="tutorial_22">Now that\'s it for a tutorial.</string>
    <string name="tutorial_23">However, you shall look for Riichi-mahjong rules.\n\nA lot of things were left uncovered, and you might still need your yaku-list, because there\'re almost 40 of them!</string>
    <string name="achievement_0">Locked</string>
    <string name="achievement_1">Win a hand with Riichi, Pinfu, Tanyao at the same time</string>
    <string name="achievement_2">Win a hand with Chanta</string>
    <string name="achievement_3">Win a hand with Iipeikou</string>
    <string name="achievement_4">Win a hand with Menzen Tsumo only</string>
    <string name="achievement_5">Win a hand with Chiitoitsu</string>
    <string name="achievement_6">Win a hand with Sanshoku</string>
    <string name="achievement_7">Win a hand with Ittsu</string>
    <string name="achievement_8">Win a lucky hand with Haitei and Ippatsu</string>
    <string name="achievement_9">Win a rare hand with Sanshoku Doko</string>
    <string name="achievement_10">Get a winning streak of 22</string>
    <string name="achievement_11">Win an epic hand with at least 13 dora</string>
    <string name="achievement_12">Win an impossible hand with Tenhou and Chuuren Poutou</string>
    <string name="achievement_13">Twelve of them are alone</string>
    <string name="chantaiayo">Chanta</string>
    <string name="chiitoitsu">Chitoitsu</string>
    <string name="chinitsu">Chinitsu</string>
    <string name="chombo">Chombo</string>
    <string name="dora">Dora</string>
    <string name="double_riichi">Double Riichi</string>
    <string name="iipeikou">Iipeikou</string>
    <string name="ippatsu">Ippatsu</string>
    <string name="ittsu">Ittsu</string>
    <string name="junchan_taiayo">Junchan</string>
    <string name="haitei_raoyue">Haitei</string>
    <string name="honitsu">Honitsu</string>
    <string name="honroutou">Honroutou</string>
    <string name="menzenchin_tsumohou">Menzen Tsumo</string>
    <string name="nagashi_mangan">Nagashi Mangan</string>
    <string name="pinfu">Pinfu</string>
    <string name="riichi">Riichi</string>
    <string name="rinshan_kaihou">Rinshan Kaihou</string>
    <string name="ryanpeikou">Ryanpeikou</string>
    <string name="sanankou">Sanankou</string>
    <string name="sankantsu">Sankantsu</string>
    <string name="sanshoku_doujun">Sanshoku</string>
    <string name="sanshoku_doukou">Sanshoku Doko</string>
    <string name="shousangen">Shousangen</string>
    <string name="tanyao">Tanyao</string>
    <string name="yakuhai">Yakuhai</string>
    <string name="chinroutou">Chinroutou</string>
    <string name="chuuren_poutou">Chuuren Poutou</string>
    <string name="daisangen">Daisangen</string>
    <string name="daisuushii">Daisuushii</string>
    <string name="kokushi_musou">Kokushi Musou</string>
    <string name="pure_chuuren_poutou">Pure Chuuren Poutou</string>
    <string name="ryuuiisou">Ryuuiisou</string>
    <string name="shousuushii">Shousuushii</string>
    <string name="suuankou">Suuankou</string>
    <string name="suuankou_tanki">Suuankou Tanki</string>
    <string name="suukantsu">Suukantsu</string>
    <string name="tenhou">Tenhou</string>
    <string name="thirteen_wait_kokushi_musou">13-wait Kokushi Musou</string>
    <string name="tsuuiisou">Tsuuiisou</string>
    <string name="chantaiayo_ema">Half Outside Hand</string>
    <string name="chiitoitsu_ema">Seven pairs</string>
    <string name="chinitsu_ema">Full Flush</string>
    <string name="chombo_ema">Chombo</string>
    <string name="dora_ema">Dora</string>
    <string name="double_riichi_ema">Double Riichi</string>
    <string name="iipeikou_ema">Pure Double Sequence</string>
    <string name="ippatsu_ema">Ippatsu</string>
    <string name="ittsu_ema">Pure Straight</string>
    <string name="junchan_taiayo_ema">Fully Outside Hand</string>
    <string name="haitei_raoyue_ema">Under the Sea</string>
    <string name="honitsu_ema">Half Flush</string>
    <string name="honroutou_ema">All Terminals and Honours</string>
    <string name="menzenchin_tsumohou_ema">Fully Concealed Hand</string>
    <string name="nagashi_mangan_ema">Nagashi Mangan</string>
    <string name="pinfu_ema">Pinfu</string>
    <string name="riichi_ema">Riichi</string>
    <string name="rinshan_kaihou_ema">After a kan</string>
</resources>