<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/prefs_general">

        <SwitchPreference
            android:defaultValue="true"
            android:key="ema_names"
            android:title="@string/prefs_ema_names"
            android:icon="@android:drawable/ic_menu_preferences" />
        <SwitchPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="score_saving"
            android:title="@string/prefs_score_saving"
            android:icon="@android:drawable/ic_menu_preferences" />
        <SwitchPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="tempai_training"
            android:title="@string/prefs_tempai_training"
            android:icon="@android:drawable/ic_menu_preferences" />
        <SwitchPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="yaku_training"
            android:title="@string/prefs_yaku_training"
            android:icon="@android:drawable/ic_menu_preferences" />
    </PreferenceCategory>
</PreferenceScreen>